<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/type"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/osmnact" />

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center"
            android:textSize="@dimen/osmnact"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serialNumber"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/osmnact" />

        <EditText
            android:id="@+id/edit_serial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/osmnact" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/osmnact" />


        <Spinner
            android:id="@+id/dropdownPlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dvacetDva" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/search"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

</LinearLayout>