<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lang"
            android:gravity="right|center_vertical"
            android:paddingRight="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/dvacetDva" />

        <Spinner
            android:id="@+id/spinnerLang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:textSize="@dimen/dvacetDva" />
    </LinearLayout>

    <Button
        android:id="@+id/nfc_write"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nfc_write"
        android:textSize="@dimen/dvacet" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:scaleType="centerInside"
        android:src="@drawable/jostalogo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:id="@+id/text_errors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/red"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/dvacetDva" />
        <Button
            android:id="@+id/list_error"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/list_of_errors"
            android:textSize="@dimen/dvacetDva" />
        <Button
            android:id="@+id/start_scanning"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:layout_margin="20dp"
            android:padding="40dp"
            android:text="@string/startScanning"
            android:textSize="@dimen/dvacetDva" />
    </LinearLayout>

</LinearLayout>