<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/black"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btnMenuRelease"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/deset"
        android:text="@string/release"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/dvacetDva" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnMenuBlock"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_margin="@dimen/deset"
            android:text="@string/block"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/dvacetDva" />

        <Button
            android:id="@+id/btnMenuUnrelease"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_margin="@dimen/deset"
            android:text="@string/unrelease"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/dvacetDva" />
    </LinearLayout>



</LinearLayout>