<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backg_app"
    android:orientation="vertical"
    android:padding="5dp">


    <LinearLayout
        android:id="@+id/llscroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_weight="0.1"
        android:gravity="top"
        android:orientation="vertical"
        android:visibility="visible">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/deset"
            android:text="@string/error_to_solve"

            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/dvacetPet" />
        <ScrollView
            android:id="@+id/ScrollView"
            style="@style/MyScrollbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <!--suppress CheckTagEmptyBody -->
            <LinearLayout
                android:id="@+id/errors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />


        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_back"
            android:visibility="invisible"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/back"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/save"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
    </LinearLayout>


</LinearLayout>